fixed overflow bug

--- a/wiiotn-client/src/renderer/styles/pagecontainer.scss
+++ b/wiiotn-client/src/renderer/styles/pagecontainer.scss
@@ -7,7 +7,9 @@
 		}
 		.content{
 			padding: 0 1rem;
+			padding-bottom:.5rem;
 			flex:1;
+			overflow: auto;
 		}
 	}	
 	.bottom {
